# fastapi-per-object-permissions

./: .gitignore  README.md  compare_test_durations.py  docker-compose-in-memory-tests.yml  docker-compose-in-memory.yml  docker-compose-mongodb-tests.yml  docker-compose-mongodb.yml  docker-compose-neo4j-tests.yml  docker-compose-neo4j.yml  docker-compose-postgres-tests.yml  docker-compose-postgres.yml  docker-compose-redis-tests.yml  docker-compose-redis.yml  pyproject.toml
src/backends/: .in_memory_backend.py.swp  in_memory_backend.py
src/per_object_permissions/: protocols.py
src/per_object_permissions/api/: config.py  main.py  schema.py
src/per_object_permissions/backends/: in_memory_backend.py  mongodb_backend.py  neo4j_backend.py  redis_backend.py
src/per_object_permissions/backends/postgres/: backend.py
src/per_object_permissions/backends/postgres/queries/: create_perms.sql  ensure_table_exists.sql
src/per_object_permissions/docker/in_memory/: Dockerfile  env
src/per_object_permissions/docker/mongodb/: Dockerfile  env
src/per_object_permissions/docker/neo4j/: Dockerfile  env
src/per_object_permissions/docker/postgres/: Dockerfile  env
src/per_object_permissions/docker/redis/: Dockerfile  env
tests/: conftest.py  test_api.py
tests/integration/: Dockerfile  test_api.py
tests/test_backends/: .test_in_memory_backend.py.swp  test_in_memory_backend.py  test_in_redis_backend.py
tests/unit/: test_api.py
tests/unit/test_backends/: test_in_memory_backend.py
