[tool.poetry]
name = "fastapi-per-object-permissions"
version = "0.1.0"
description = "A WiP proof of concept for per-object-permission service implemented with a range of database backends."
authors = ["Simon Crowe <simon.r.crowe@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[mypy]
mypy_path = "src"
