[tool.poetry]
name = "fastapi-per-object-permissions"
version = "0.1.0"
description = "A WiP proof of concept for per-object-permission service implemented with a range of database backends."
authors = ["Simon Crowe <simon.r.crowe@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
requests = "^2.28.0"
uvicorn = "^0.18.2"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.1"
pytest-asyncio = ">=0.20.3"
ipdb = "^0.13.9"
junitparser = "^2.8.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.1.1"
pytest-random-order = ">=1.0.4"
requests = ">=2.28.1"
fakeredis = "^1.9.1"

[tool.poetry.group.redis.dependencies]
redis = "^4.3.4"

[tool.poetry.group.postgres.dependencies]
psycopg = "^3.1.4"

[tool.poetry.group.mongodb.dependencies]
motor = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
junit_duration_report = "call"
pythonpath = [
  "src"
]

[mypy]
mypy_path = "src"
